--- a/DongGia-master/src/components/_header/index.pug
+++ b/DongGia-master/src/components/_header/index.pug
@@ -22,7 +22,7 @@ header
 						.dropdown
 							a(href="#") EN
 							a(href="#") VN
-				.main-menu
+				.main-menu.category-list
 					ul
 						li
 							a(href="about.html") giới thiệu
