--- a/DongGia-master/src/components/_header/index.sass
+++ b/DongGia-master/src/components/_header/index.sass
@@ -199,7 +199,7 @@ header
 	.category-list
 		flex-grow: 1
 		flex-basis: 0
-		margin-top: .8rem
+		margin-top: 20px
 		.ModuleContent
 			background: #404040
 			.Module
@@ -362,7 +362,8 @@ header
 			width: 100%
 			max-width: 300px
 			height: 550px
-			background: #005D00
+			margin-top: .8rem
+			background: #404040
 			transform: translateX(100%)
 			transition: all .5s ease-out
 			&.active
