--- a/DongGia-master/src/components/employ/index.pug
+++ b/DongGia-master/src/components/employ/index.pug
@@ -8,38 +8,42 @@ section.employ
 				p The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater.
 			img(src="../img/employ/employ_banner_2.png", alt="", srcset="")
 section.module-steps
-	h2.moduleTitle Các bước tuyển dụng
 	.container
+		h2.moduleTitle Các bước tuyển dụng
 		.row
-			a(href="").step-box
-				figure
-					img(src="../img/employ/employ_icon_1.png", alt="", srcset="")
-					figcaption
-						h3 Ứng Tuyển & PHỎNG VẤN
-						p Ứng viên chọn vị trí việc làm mong muốn. 
-						p Tham gia phỏng vấn theo thời gian công ty quy định.
-						.step Bước 1
-			a(href="").step-box
-				figure
-					img(src="../img/employ/employ_icon_2.png", alt="", srcset="")
-					figcaption
-						h3 Đánh giá quyết định
-						p Công ty đánh giá năng lực chọn ra ứng viên xuất sắc nhất.
-						.step Bước 2
-			a(href="").step-box
-				figure
-					img(src="../img/employ/employ_icon_3.png", alt="", srcset="")
-					figcaption
-						h3 Tập sự thử viêc
-						p Công ty gủi thư mời thử việc. Ký hợp đồng thử việc trong 02 tháng.
-						.step Bước 3
-			a(href="").step-box
-				figure
-					img(src="../img/employ/employ_icon_4.png", alt="", srcset="")
-					figcaption
-						h3 TUYỂN DỤNG CHÍNH THỨC
-						p Thông báo kết quả tuyển dụng. Ký hợp đồng lao động.
-						.step.finish Hoàn thành
+			.step-box
+				a(href="")
+					figure
+						img(src="../img/employ/employ_icon_1.png", alt="", srcset="")
+						figcaption
+							h3 Ứng Tuyển & PHỎNG VẤN
+							p Ứng viên chọn vị trí việc làm mong muốn. 
+							p Tham gia phỏng vấn theo thời gian công ty quy định.
+							.step Bước 1
+			.step-box
+				a(href="")
+					figure
+						img(src="../img/employ/employ_icon_2.png", alt="", srcset="")
+						figcaption
+							h3 Đánh giá quyết định
+							p Công ty đánh giá năng lực chọn ra ứng viên xuất sắc nhất.
+							.step Bước 2
+			.step-box
+				a(href="")
+					figure
+						img(src="../img/employ/employ_icon_3.png", alt="", srcset="")
+						figcaption
+							h3 Tập sự thử viêc
+							p Công ty gủi thư mời thử việc. Ký hợp đồng thử việc trong 02 tháng.
+							.step Bước 3
+			.step-box
+				a(href="")
+					figure
+						img(src="../img/employ/employ_icon_4.png", alt="", srcset="")
+						figcaption
+							h3 TUYỂN DỤNG CHÍNH THỨC
+							p Thông báo kết quả tuyển dụng. Ký hợp đồng lao động.
+							.step.finish Hoàn thành
 section.table
 	.container
 		h2.moduleTitle Vị trí tuyển dụng
