--- a/DongGia-master/src/components/new-event/index.pug
+++ b/DongGia-master/src/components/new-event/index.pug
@@ -1,77 +1,77 @@
 section.new-event
-	h2.moduleTitle Tin tức - Sự kiện
-	nav
-		a.left(href="") Tin doanh nghiệp
-		a.right(href="") Tin thị trường
 	.container
+		h2.moduleTitle Tin tức - Sự kiện
+		nav
+			a(href="") Tin doanh nghiệp
+			a(href="") Tin thị trường
 		.row
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_1.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018] 
 								|  Bất động sản Việt Nam: Thu hút mạnh vốn ngoại
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_2.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  Căn hộ 22 m2 đầy đủ tiện ích với thiết kế siêu thông minh
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_3.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  Nguồn cung khổng lồ chung cư chuẩn bị đổ vào thị trường BĐS trong năm 2019
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_4.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  Bất động sản Khánh Hòa vẫn âm thầm nổi sóng
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_5.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  Nhà siêu mỏng, hình thù kỳ dị lại đu bám bên đường nghìn tỷ
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_6.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  “Lệch pha” cung cầu căn hộ năm 2019
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_7.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  Sức hút bất động sản giá trị thực tại Phú Quốc
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_8.png", alt="")
 						figcaption
 							p
 								strong [30/12/2018]
 								|  Thị trường BĐS TP.HCM quý 4/2018 diễn biến "lạ"
 			.box-content
-				a(href="")
-					figure
+				figure
+					a(href="")
 						img(src="../img/new-event/news_img_9.png", alt="")
 						figcaption
 							p
