--- a/DongGia-master/src/components/support/index.pug
+++ b/DongGia-master/src/components/support/index.pug
@@ -5,31 +5,23 @@ section.support
 			h3 Câu hỏi thường gặp
 			p Mọi thắc mắc vui lòng liên hệ qua địa chỉ Email: Info@hoangthaiphu.vn
 			.FAQs-wrapper
-				.faqs(item='item-1')
+				.faqs
 					.question
-						h4
-							span What is Lorem Ipsum?
-							span.mdi
+						h4.mdi Why do we use it?
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-				.faqs(item='item-2')
+				.faqs
 					.question
-						h4
-							span Why do we use it?
-							span.mdi
+						h4.mdi Why do we use it?
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-				.faqs(item='item-3')
+				.faqs
 					.question
-						h4
-							span Why do we use it?
-							span.mdi
+						h4.mdi Why do we use it?
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-				.faqs.non-line(item='item-4')
+				.faqs
 					.question
-						h4
-							span Why do we use it?
-							span.mdi
+						h4.mdi Why do we use it?
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
