--- a/DongGia-master/src/components/main.sass
+++ b/DongGia-master/src/components/main.sass
@@ -14,3 +14,10 @@
 @import "home_banner/index.sass"
 @import "banner/index.sass"
 @import "about/index.sass"
+
+=line($line)
+	overflow: hidden
+	display: -webkit-box
+	text-overflow: ellipsis
+	-webkit-line-clamp: $line
+	-webkit-box-orient: vertical
