--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -1,74 +1,83 @@
 .new-event
-	.ModuleContent
-		.row
+	.container
+		h2
+			padding-bottom: 35px
+		nav
+			padding: 0
+			display: flex
 			justify-content: center
-			.Module
-				justify-content: center
-			h2
-				padding-bottom: 35px
-			nav
-				padding: 0
+			align-items: center
+			text-align: center
+			flex-direction: row
+			list-style-type: none
+			padding-bottom: 40px
+			width: 100%
+			a
+				padding: 0 !important
+				color: #4a4a4a
+				font-family: 'Montserrat', sans-serif
+				font-size: 15px
+				font-weight: 400
+				border: 1px solid #eeeeee
+				max-width: 100%
+				width: 160px
+				height: 40px
 				display: flex
 				justify-content: center
 				align-items: center
-				text-align: center
-				flex-direction: row
-				list-style-type: none
-				padding-bottom: 40px
-				width: 100%
+				text-decoration: none
+				&:hover, &.active
+					box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
+					background-color: #e1e1e1
+				a:nth-child(1)
+						border-radius: 5px 0 0 5px
+				a:nth-child(2)
+						border-radius: 0 5px 5px 0
+			@media (min-width: 768px)
 				a
-					padding: 0 !important
-					color: #4a4a4a
-					font-family: 'Montserrat', sans-serif
-					font-size: 15px
-					font-weight: 400
-					border: 1px solid #eeeeee
-					max-width: 100%
-					width: 160px
-					height: 40px
-					display: flex
-					justify-content: center
-					align-items: center
-					text-decoration: none
-					&:hover, &.active
-						box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
-						background-color: #e1e1e1
-					a:nth-child(1)
-							border-radius: 5px 0 0 5px
-					a:nth-child(2)
-							border-radius: 0 5px 5px 0
-				@media (min-width: 768px)
-					a
-						width: 270px
-			@media (min-width: 768px)
-				padding-bottom: 40px
-				.box-content
-					padding: 0 15px
-					text-align: center
-					width: 100%
-					figure
-						position: relative
-						img
+					width: 270px
+		.row
+			@media (max-width: 575.98px)
+				justify-content: center
+			.Module
+				width: 100%
+				.ModuleContent
+					.box-content
+						padding: 0 15px
+						text-align: center
+						width: 100%
+						flex: 0 0 33.3333%
+						max-width: 33.3333%
+						figure
+							position: relative
 							width: 100%
-						figcaption
-							text-align: left
-							p
-								color: #404040
-								font-family: 'Montserrat', sans-serif
-								font-size: 14px
-								font-weight: 400
-								line-height: 22px
-								display: inline-block
-								padding-top: 15px !important
-								padding-bottom: 25px !important
-			@media (min-width: 512px)
-				.box-content
-					flex: 0 0 50%
-					max-width: 50%
-			@media (min-width: 768px)
-				.box-content
-					flex: 0 0 33.3333%
-					max-width: 33.3333%
+							img
+								width: 100%
+								height: 228px
+							figcaption
+								text-align: left
+								p
+									color: #404040
+									font-family: 'Montserrat', sans-serif
+									font-size: 14px
+									font-weight: 400
+									line-height: 22px
+									display: inline-block
+									margin-top: 15px
+									margin-bottom: 25px
+									overflow: hidden
+									display: -webkit-box
+									text-overflow: ellipsis
+									-webkit-line-clamp: 2
+									-webkit-box-orient: vertical
+						@media (max-width: 767.98px)
+							flex: 0 0 50%
+							max-width: 50%
+						@media (max-width: 512px)
+							flex: 0 0 100%
+							max-width: 100%
+	@media (min-width: 768px)
+		padding-bottom: 40px
 .news
 	padding-bottom: 35px
 	h2
