--- a/DongGia-master/src/components/project/index.pug
+++ b/DongGia-master/src/components/project/index.pug
@@ -5,46 +5,38 @@ section.project
 			.content
 				a(href="")
 					figure
-						img(src="../img/project/project_item_1.png", alt="")
+						a(href="")
+							img(src="../img/project/project_item_1.png", alt="")
 						figcaption
 							h3 Ocean Hill Village
-							p
-								span NHA TRANG
-								span.fas.fa-arrow-right
+							p.fas.fa-arrow-right NHA TRANG
 				a(href="")
 					figure
 						img(src="../img/project/project_item_3.png", alt="")
 						figcaption
 							h3 The Silk Path City
-							p
-								span phú quốc
-								span.fas.fa-arrow-right
-			.content.fix-height
+							p.fas.fa-arrow-right phú quốc
+			.content
 				a(href="")
 					figure
 						img(src="../img/project/project_item_8.png", alt="")
 						figcaption
 							h3 Căn hộ Napoleon Castle
-							p
-								span NHA TRANG bay
-								span.fas.fa-arrow-right
-			.content.order-1
+							p.fas.fa-arrow-right NHA TRANG bay
+			.content
 				a(href="")
 					figure
 						img(src="../img/project/project_item_2.png", alt="")
 						figcaption
 							h3 Intercontinental
-							p
-								span phú quốc
-								span.fas.fa-arrow-right
+							p.fas.fa-arrow-right phú quốc
 				a(href="")
 					figure
 						img(src="../img/project/project_item_4.png", alt="")
 						figcaption
 							h3 Căn hộ Sunshine Marina
-							p
-								span NHA TRANG bay
-								span.fas.fa-arrow-right
+							p.fas.fa-arrow-right NHA TRANG bay
+		.row
 			.content
 				a(href="")
 					figure
@@ -60,15 +52,11 @@ section.project
 						img(src="../img/project/project_item_5.png", alt="")
 						figcaption
 							h3 Melia Bali Villas Resort
-							p
-								span phú quốc
-								span.fas.fa-arrow-right
-			.content.order-1
+							p.fas.fa-arrow-right phú quốc
+			.content
 				a(href="")
 					figure
 						img(src="../img/project/project_item_7.png", alt="")
 						figcaption
 							h3 Lan Rung Resort
-							p
-								span phú quốc
-								span.fas.fa-arrow-right
+							p.fas.fa-arrow-right phú quốc
