--- a/DongGia-master/src/components/project/index.sass
+++ b/DongGia-master/src/components/project/index.sass
@@ -5,17 +5,20 @@
 	.container
 		.row
 			justify-content: center
-			.fix-height
-				figure
-					height: 100%
-					a
-						img
-							height: 100
+			.Module-169
+				width: 100%
 			.content
-				padding: 0 10px
 				figure
 					position: relative
+					img
+						height: 276px
+						width: 100%
+						@media (max-width: 991.98px)
+							height: 226px
+						@media (max-width: 575.98px)
+							height: 176px
 					figcaption
+						text-align: center
 						position: absolute
 						bottom: 0
 						left: 0
@@ -29,52 +32,63 @@
 							font-weight: 400
 							text-transform: none
 							text-align: center
-							@media (max-width: 991,98px)
+							display: inline-block
+							width: 100%
+							@media (max-width: 991.98px)
 								font-size: 20px
-							@media (max-width: 767,98px)
+							@media (max-width: 767.98px)
 								font-size: 18px
-							@media (max-width: 565,98px)
+							@media (max-width: 565.98px)
 								font-size: 16px
 						p
 							text-align: center
 							display: flex
 							justify-content: center
 							align-items: center
-							span
-								text-transform: uppercase
-								text-align: center
-								font-family: "Roboto - Regular", sans-serif
-								font-size: 13px
+							text-transform: uppercase
+							text-align: center
+							font-family: "Roboto - Regular", sans-serif
+							font-size: 13px
+							font-weight: 400
+							color: #ffffff
+							@media (max-width: 991.98px)
+								font-size: 12px
+						.fa-arrow-right
+							display: inline-flex
+							align-items: center
+							justify-content: center
+							font-style: normal
+							&:after
+								content: "\f054"
+								font-family: "Material Design Icons"
 								font-weight: 400
 								color: #ffffff
-							.fa-arrow-right
-								display: inline-flex
-								align-items: center
-								justify-content: center
-								width: 20px
-								height: 20px
-								font-style: normal
-								&:after
-									content: "\f054"
-									font-family: "Material Design Icons"
-									font-weight: 400
-									color: #ffffff
-									font-size: 18px
-									padding-left: 5px
+								font-size: 18px
+								padding-left: 5px
 					img
-						padding-top: 20px
+						margin-top: 20px
+				&:nth-child(2)
+					figure
+						height: 100%
+						img
+							width: 100%
+							height: 572px
+							@media (max-width: 991.98px)
+								height: 472px
+							@media (max-width: 575.98px)
+								height: 372px
 			@media (min-width: 512px)
-				.order-1
-					order: 2
 				.content
 					flex: 0 0 50%
 					max-width: 50%
+					&:nth-child(3), &:nth-child(6)
+						order: 2
 			@media (min-width: 768px)
-				.order-1
-					order: 0
 				.content
 					flex: 0 0 33.3333%
 					max-width: 33.3333%
+					&:nth-child(3), &:nth-child(6)
+						order: 0
 					figure
 						img
 							width: 100%
