--- a/DongGia-master/src/components/employ/index.pug
+++ b/DongGia-master/src/components/employ/index.pug
@@ -4,8 +4,9 @@ section.employ
 			.recruit-content
 				h3 Tuyển dụng
 				h2.moduleTitle Hoàng Phú Thái
-				p There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. 
-				p The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater.
+				p There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+					br
+					| The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater.
 			img(src="../img/employ/employ_banner_2.png", alt="", srcset="")
 section.module-steps
 	.container
@@ -18,7 +19,8 @@ section.module-steps
 						figcaption
 							h3 Ứng Tuyển & PHỎNG VẤN
 							p Ứng viên chọn vị trí việc làm mong muốn. 
-							p Tham gia phỏng vấn theo thời gian công ty quy định.
+								br
+								| Tham gia phỏng vấn theo thời gian công ty quy định.
 							.step Bước 1
 			.step-box
 				a(href="")
@@ -53,77 +55,77 @@ section.table
 					thead
 						tr
 							th STT
-							th.employee Vị trí tuyển dụng
+							th Vị trí tuyển dụng
 							th Số lượng
 							th Địa điểm
 							th ngày hết hạn
 					tbody
 						tr.odd
 							td 1
-							td.employee
+							td
 								a(href="") Nhân viên bán hàng
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.even
 							td 2
-							td.employee
+							td
 								a(href="") Nhân viên kho
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.odd
 							td 3
-							td.employee
+							td
 								a(href="") Nhân viên kế toán
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.even
 							td 4
-							td.employee
+							td
 								a(href="") Trợ lý Tổng Giám Đốc
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.odd
 							td 5
-							td.employee
+							td
 								a(href="") Tài xế xe tải
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.even
 							td 6
-							td.employee
+							td
 								a(href="") Nhân viên kinh doanh
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.odd
 							td 7
-							td.employee
+							td
 								a(href="") Trưởng phòng kinh doanh
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.even
 							td 8
-							td.employee
+							td
 								a(href="") Thư ký Giám Đốc
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.odd
 							td 9
-							td.employee
+							td
 								a(href="") Chuyên viên tư vấn BĐS
 							td 10
 							td Hồ Chí Minh
 							td 31/12/2018
 						tr.even
 							td 10
-							td.employee
+							td
 								a(href="") Thủ kho
 							td 10
 							td Hồ Chí Minh
