--- a/DongGia-master/src/components/employ/index.sass
+++ b/DongGia-master/src/components/employ/index.sass
@@ -172,6 +172,9 @@
 						text-transform: uppercase
 						padding: 10px 15px
 						text-align: center
+						&:nth-child(2)
+							text-align: left
+							padding-left: 0
 			tbody
 				.even
 					background-color: #f5f5f5
@@ -186,6 +189,8 @@
 						padding: .5rem 0
 						text-align: center
 						text-decoration: none
+						&:nth-child(2)
+							text-align: left
 						a
 							height: 50px
 							color: #333333
@@ -195,8 +200,6 @@
 							padding: .5rem 0
 							text-align: center
 							text-decoration: none
-					.employee
-						text-align: left
 					&:hover
 						box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.2)
 						transform: translateY(-7px)
