--- a/DongGia-master/src/components/project/index.pug
+++ b/DongGia-master/src/components/project/index.pug
@@ -2,61 +2,73 @@ section.project
 	h2.moduleTitle DỰ ÁN
 	.container
 		.row
-			.content
-				a(href="")
-					figure
-						a(href="")
-							img(src="../img/project/project_item_1.png", alt="")
-						figcaption
-							h3 Ocean Hill Village
-							p.fas.fa-arrow-right NHA TRANG
-				a(href="")
-					figure
-						img(src="../img/project/project_item_3.png", alt="")
-						figcaption
-							h3 The Silk Path City
-							p.fas.fa-arrow-right phú quốc
-			.content
-				a(href="")
-					figure
-						img(src="../img/project/project_item_8.png", alt="")
-						figcaption
-							h3 Căn hộ Napoleon Castle
-							p.fas.fa-arrow-right NHA TRANG bay
-			.content
-				a(href="")
-					figure
-						img(src="../img/project/project_item_2.png", alt="")
-						figcaption
-							h3 Intercontinental
-							p.fas.fa-arrow-right phú quốc
-				a(href="")
-					figure
-						img(src="../img/project/project_item_4.png", alt="")
-						figcaption
-							h3 Căn hộ Sunshine Marina
-							p.fas.fa-arrow-right NHA TRANG bay
-		.row
-			.content
-				a(href="")
-					figure
-						img(src="../img/project/project_item_6.png", alt="")
-						figcaption
-							h3 Fusion Resort
-							p
-								span phú quốc
-								span.fas.fa-arrow-right
-			.content
-				a(href="")
-					figure
-						img(src="../img/project/project_item_5.png", alt="")
-						figcaption
-							h3 Melia Bali Villas Resort
-							p.fas.fa-arrow-right phú quốc
-			.content
-				a(href="")
-					figure
-						img(src="../img/project/project_item_7.png", alt="")
-						figcaption
-							h3 Lan Rung Resort
-							p.fas.fa-arrow-right phú quốc
+			.col-sm-6.col-md-4
+				.col
+					.item
+						figure
+							a(href="")
+								img(src="../img/project/project_item_1.png", alt="")
+								figcaption
+									h3 Ocean Hill Village
+									p.fas.fa-arrow-right NHA TRANG
+				.col
+					.item
+						figure
+							a(href="")
+								img(src="../img/project/project_item_3.png", alt="")
+								figcaption
+									h3 The Silk Path City
+									p.fas.fa-arrow-right phú quốc
+			.col-sm-6.col-md-4
+				.col
+					.item
+						figure
+							a(href="")
+								img(src="../img/project/project_item_8.png", alt="")
+								figcaption
+									h3 Căn hộ Napoleon Castle
+									p.fas.fa-arrow-right NHA TRANG bay
+			.col-sm-6.col-md-4
+				.col
+					.item
+						figure
+							a(href="")
+								img(src="../img/project/project_item_2.png", alt="")
+								figcaption
+									h3 Intercontinental
+									p.fas.fa-arrow-right phú quốc
+				.col
+					.item
+						figure
+							a(href="")
+								img(src="../img/project/project_item_4.png", alt="")
+								figcaption
+									h3 Căn hộ Sunshine Marina
+									p.fas.fa-arrow-right NHA TRANG bay
+			.col-sm-6.col-md-4
+					.col
+						.item
+							figure
+								a(href="")
+									img(src="../img/project/project_item_6.png", alt="")
+									figcaption
+										h3 Fusion Resort
+										p.fas.fa-arrow-right phú quốc
+			.col-sm-6.col-md-4
+					.col
+						.item
+							figure
+								a(href="")
+									img(src="../img/project/project_item_5.png", alt="")
+									figcaption
+										h3 Melia Bali Villas Resort
+										p.fas.fa-arrow-right phú quốc
+			.col-sm-6.col-md-4
+					.col
+						.item
+							figure
+								a(href="")
+									img(src="../img/project/project_item_7.png", alt="")
+									figcaption
+										h3 Lan Rung Resort
+										p.fas.fa-arrow-right phú quốc
