--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -168,6 +168,9 @@ img
 		flex: 0 0 50%
 		max-width: 50%
 @media (min-width: 768px)
+	.col-md-4
+		flex: 0 0 33.3333%
+		max-width: 33.3333%
 	.col-md-6
 		flex: 0 0 50%
 		max-width: 50%
