--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -48,34 +48,38 @@
 						width: 100%
 						flex: 0 0 33.3333%
 						max-width: 33.3333%
-						figure
-							position: relative
-							width: 100%
-							img
+						a
+							text-decoration: none
+							&:hover
+								text-decoration: none
+							figure
+								position: relative
 								width: 100%
-								height: 228px
-							figcaption
-								text-align: left
-								p
-									color: #404040
-									font-family: 'Montserrat', sans-serif
-									font-size: 14px
-									font-weight: 400
-									line-height: 22px
-									display: inline-block
-									margin-top: 15px
-									margin-bottom: 25px
-									overflow: hidden
-									display: -webkit-box
-									text-overflow: ellipsis
-									-webkit-line-clamp: 2
-									-webkit-box-orient: vertical
-						@media (max-width: 767.98px)
-							flex: 0 0 50%
-							max-width: 50%
-						@media (max-width: 512px)
-							flex: 0 0 100%
-							max-width: 100%
+								img
+									width: 100%
+									height: 228px
+								figcaption
+									text-align: left
+									p
+										color: #404040
+										font-family: 'Montserrat', sans-serif
+										font-size: 14px
+										font-weight: 400
+										line-height: 22px
+										display: inline-block
+										margin-top: 15px
+										margin-bottom: 25px
+										overflow: hidden
+										display: -webkit-box
+										text-overflow: ellipsis
+										-webkit-line-clamp: 2
+										-webkit-box-orient: vertical
+							@media (max-width: 767.98px)
+								flex: 0 0 50%
+								max-width: 50%
+							@media (max-width: 512px)
+								flex: 0 0 100%
+								max-width: 100%
 	@media (min-width: 768px)
 		padding-bottom: 40px
 .news
