--- a/DongGia-master/src/components/ability/index.pug
+++ b/DongGia-master/src/components/ability/index.pug
@@ -33,19 +33,16 @@ section.projected
 							h3 
 								a Fusion Resort
 								a(href="")
-							p NHA TRANG
-								i.fas.fa-arrow-right
+							p.fas.fa-arrow-right NHA TRANG
 				.swiper-slide
 					figure
 						img(src="../img/product/product_project_2.png", alt="", srcset="")
 						figcaption
 							h3 Chensea Resort and Spa
-							p PHÚ QUỐC
-								i.fas.fa-arrow-right
+							p.fas.fa-arrow-right PHÚ QUỐC
 				.swiper-slide
 					figure
 						img(src="../img/product/product_project_3.png", alt="", srcset="")
 						figcaption
 							h3 Căn hộ Sunshine Marina
-							p NHA TRANG BAY
-								i.fas.fa-arrow-right
+							p.fas.fa-arrow-right NHA TRANG BAY
