--- a/DongGia-master/src/components/project/index.pug
+++ b/DongGia-master/src/components/project/index.pug
@@ -8,67 +8,91 @@ section.project
 						figure
 							a(href="")
 								img(src="../img/project/project_item_1.png", alt="")
-								figcaption
-									h3 Ocean Hill Village
-									p.fas.fa-arrow-right NHA TRANG
+							figcaption
+								h3
+									a Ocean Hill Village
+									a(href="")
+								p.fas.fa-arrow-right
+									a NHA TRANG
 				.col
 					.item
 						figure
 							a(href="")
 								img(src="../img/project/project_item_3.png", alt="")
-								figcaption
-									h3 The Silk Path City
-									p.fas.fa-arrow-right phú quốc
+							figcaption
+								h3
+									a The Silk Path City
+									a(href="")
+								p.fas.fa-arrow-right
+									a phú quốc
 			.col-sm-6.col-md-4
 				.col
 					.item
 						figure
 							a(href="")
 								img(src="../img/project/project_item_8.png", alt="")
-								figcaption
-									h3 Căn hộ Napoleon Castle
-									p.fas.fa-arrow-right NHA TRANG bay
+							figcaption
+								h3
+									a Căn hộ Napoleon Castle
+									a(href="")
+								p.fas.fa-arrow-right
+									a NHA TRANG bay
 			.col-sm-6.col-md-4
 				.col
 					.item
 						figure
 							a(href="")
 								img(src="../img/project/project_item_2.png", alt="")
-								figcaption
-									h3 Intercontinental
-									p.fas.fa-arrow-right phú quốc
+							figcaption
+								h3
+									a Intercontinental
+									a(href="")
+								p.fas.fa-arrow-right
+									a phú quốc
 				.col
 					.item
 						figure
 							a(href="")
 								img(src="../img/project/project_item_4.png", alt="")
-								figcaption
-									h3 Căn hộ Sunshine Marina
-									p.fas.fa-arrow-right NHA TRANG bay
+							figcaption
+								h3
+									a Căn hộ Sunshine Marina
+									a(href="")
+								p.fas.fa-arrow-right
+									a NHA TRANG bay
 			.col-sm-6.col-md-4
 					.col
 						.item
 							figure
 								a(href="")
 									img(src="../img/project/project_item_6.png", alt="")
-									figcaption
-										h3 Fusion Resort
-										p.fas.fa-arrow-right phú quốc
+								figcaption
+									h3
+										a Fusion Resort
+										a(href="")
+									p.fas.fa-arrow-right
+										a phú quốc
 			.col-sm-6.col-md-4
 					.col
 						.item
 							figure
 								a(href="")
 									img(src="../img/project/project_item_5.png", alt="")
-									figcaption
-										h3 Melia Bali Villas Resort
-										p.fas.fa-arrow-right phú quốc
+								figcaption
+									h3
+										a Melia Bali Villas Resort
+										a(href="")
+									p.fas.fa-arrow-right
+										a phú quốc
 			.col-sm-6.col-md-4
 					.col
 						.item
 							figure
 								a(href="")
 									img(src="../img/project/project_item_7.png", alt="")
-									figcaption
-										h3 Lan Rung Resort
-										p.fas.fa-arrow-right phú quốc
+								figcaption
+									h3
+										a Lan Rung Resort
+										a(href="")
+									p.fas.fa-arrow-right
+										a phú quốc
