--- a/DongGia-master/src/components/_header/index.pug
+++ b/DongGia-master/src/components/_header/index.pug
@@ -23,23 +23,25 @@ header
 							a(href="#") EN
 							a(href="#") VN
 				.main-menu.category-list
-					ul
-						li
-							a(href="about.html") giới thiệu
-						li
-							a(href="ability.html") năng lực thi công
-						li
-							a(href="project.html") dự án
-						li
-							a(href="new-event.html") tin tức - sự kiện
-						li
-							a(href="support.html") hỗ trợ khách hàng
-						li
-							a(href="employ.html") tuyển dụng
-						li
-							a(href="gallery.html") thư viện
-						li
-							a(href="contact.html") liên hệ
+					.ModuleContent
+						.Module
+							ul
+								li
+									a(href="about.html") giới thiệu
+								li
+									a(href="ability.html") năng lực thi công
+								li
+									a(href="project.html") dự án
+								li
+									a(href="new-event.html") tin tức - sự kiện
+								li
+									a(href="support.html") hỗ trợ khách hàng
+								li
+									a(href="employ.html") tuyển dụng
+								li
+									a(href="gallery.html") thư viện
+								li
+									a(href="contact.html") liên hệ
 			.toggle-menu
 				span.mdi.mdi-menu
 	.backdrop
