--- a/DongGia-master/src/components/project/index.sass
+++ b/DongGia-master/src/components/project/index.sass
@@ -2,104 +2,121 @@
 	padding-bottom: 110px
 	h2.moduleTitle
 		padding-bottom: 15px
-	.container
-		.row
-			justify-content: center
-			.Module-169
-				width: 100%
-			.col-sm-6.col-md-4
-				.col
-					padding-left: 0
-					padding-right: 0
-					.item
-						margin-top: 20px
-						figure
-							overflow: hidden
-							position: relative
-							&:hover
-								img
-									transform: scale(1.2)
-									transition: 1s all ease-in-out
-							img
-								height: 276px
-								width: 100%
-								transition: 1s all ease-in-out
-								@media (max-width: 991.98px)
-									height: 226px
-								@media (max-width: 575.98px)
-									height: 176px
-							figcaption
-								text-align: center
-								position: absolute
-								bottom: 0
-								left: 0
-								width: 100%
-								background: linear-gradient(rgba(0, 0, 0, 0), #000000cc)
-								padding-bottom: 1rem
-								h3
-									color: #ffffff
-									font-family: 'Roboto', sans-serif
-									font-size: 22px
-									font-weight: 400
-									text-transform: none
-									text-align: center
-									display: inline-block
-									width: 100%
-									@media (max-width: 991.98px)
-										font-size: 20px
-									@media (max-width: 767.98px)
-										font-size: 18px
-									@media (max-width: 565.98px)
-										font-size: 16px
-								p
-									text-align: center
-									display: flex
-									justify-content: center
-									align-items: center
-									text-transform: uppercase
-									text-align: center
-									font-family: "Roboto - Regular", sans-serif
-									font-size: 13px
-									font-weight: 400
-									color: #ffffff
-									@media (max-width: 991.98px)
-										font-size: 12px
-								.fa-arrow-right
-									display: inline-flex
-									align-items: center
-									justify-content: center
-									font-style: normal
-									&:after
-										content: "\f054"
-										font-family: "Material Design Icons"
-										font-weight: 400
-										color: #ffffff
-										font-size: 18px
-										padding-left: 5px
-				&:nth-child(2)
-					.col
-						.item
-							figure
-								height: 100%
-								img
-									width: 100%
-									height: 572px
-									@media (max-width: 991.98px)
-										height: 472px
-									@media (max-width: 575.98px)
-										height: 372px
-				@media (min-width: 512px)
-					&:nth-child(3), &:nth-child(6)
-						order: 2
-				@media (min-width: 768px)
-					&:nth-child(3), &:nth-child(6)
-						order: 0
-					.col
-						.item
-							figure
-								img
-									width: 100%
-			
+		width: 100%
+	.Module
+		width: 100%
+		.ModuleContent
+			display: flex
+			.container
+				.row
+					justify-content: center
+					&:last-child
+						.col-sm-6.col-md-4
+							&:nth-child(2)
+								.col
+									.item
+										figure
+											img
+												height: 276px
+												width: 100%
+												transition: 1s all ease-in-out
+												@media (max-width: 991.98px)
+													height: 226px
+												@media (max-width: 575.98px)
+													height: 176px
+					.col-sm-6.col-md-4
+						.col
+							padding-left: 0
+							padding-right: 0
+							.item
+								margin-top: 20px
+								figure
+									overflow: hidden
+									position: relative
+									&:hover
+										img
+											transform: scale(1.2)
+											transition: 1s all ease-in-out
+									img
+										height: 276px
+										width: 100%
+										transition: 1s all ease-in-out
+										@media (max-width: 991.98px)
+											height: 226px
+										@media (max-width: 575.98px)
+											height: 176px
+									figcaption
+										text-align: center
+										position: absolute
+										bottom: 0
+										left: 0
+										width: 100%
+										background: linear-gradient(rgba(0, 0, 0, 0), #000000cc)
+										padding-bottom: 1rem
+										h3
+											color: #ffffff
+											font-family: 'Roboto', sans-serif
+											font-size: 22px
+											font-weight: 400
+											text-transform: none
+											text-align: center
+											display: inline-block
+											width: 100%
+											@media (max-width: 991.98px)
+												font-size: 20px
+											@media (max-width: 767.98px)
+												font-size: 18px
+											@media (max-width: 565.98px)
+												font-size: 16px
+										p
+											text-align: center
+											display: flex
+											justify-content: center
+											align-items: center
+											text-transform: uppercase
+											text-align: center
+											font-family: "Roboto - Regular", sans-serif
+											font-size: 13px
+											font-weight: 400
+											color: #ffffff
+											@media (max-width: 991.98px)
+												font-size: 12px
+										.fa-arrow-right
+											display: inline-flex
+											align-items: center
+											justify-content: center
+											font-style: normal
+											&:after
+												content: "\f054"
+												font-family: "Material Design Icons"
+												font-weight: 400
+												color: #ffffff
+												font-size: 18px
+												padding-left: 5px
+						&:nth-child(2)
+							.col
+								.item
+									figure
+										height: 100%
+										img
+											width: 100%
+											height: 572px
+											@media (max-width: 991.98px)
+												height: 472px
+											@media (max-width: 575.98px)
+												height: 372px
+						@media (min-width: 512px)
+							&:nth-child(3), &:nth-child(6)
+								order: 2
+						@media (min-width: 768px)
+							&:nth-child(3), &:nth-child(6)
+								order: 0
+							.col
+								.item
+									figure
+										img
+											width: 100%
+
 .project-news
 	text-align: center
 	.col-6
