--- a/DongGia-master/src/components/about/index.pug
+++ b/DongGia-master/src/components/about/index.pug
@@ -7,7 +7,7 @@ section.about
 			br
 			p Để góp một phần quan trọng cho sự nghiệp xây dựng tương lai vững chắc, hơn 100 đội ngũ, chuyên gia không ngừng trau dồi và cải thiện kỹ năng trong ngành. Cam kết mang đến những dịch vụ và công trình đạt hiệu quả tối ưu cho đối tác và khách hàng.
 			.readmore
-				button Xem thêm
+				a(href="") Xem thêm
 		.module-img
 			img(src="../img/about/about_banner.png", alt="", srcset="")
 section.module-seek
@@ -28,7 +28,7 @@ section.module-seek
 				.module-Content
 					h3 Giá trị cốt lõi
 					img(src="../img/about/about_icon_3.png", alt="", srcset="")
-					h4 CHÍNH TRỰC - HIỆU QUẢ - CHUYÊN NGHIỆP
+					p CHÍNH TRỰC - HIỆU QUẢ - CHUYÊN NGHIỆP
 section.module-history
 	h2.moduleTitle Lịch sử phát triển
 	.container
