--- a/DongGia-master/src/components/ability/index.sass
+++ b/DongGia-master/src/components/ability/index.sass
@@ -1,5 +1,5 @@
 .ability
-	background: url('../img/product/product_banner_bg.png') center center no-repeat
+	background: url('./img/product/product_banner_bg.png') center center no-repeat
 	background-size: cover
 	padding-bottom: 60px
 	.container
