--- a/DongGia-master/src/components/about/index.sass
+++ b/DongGia-master/src/components/about/index.sass
@@ -406,6 +406,7 @@
 			width: 100%
 			height: 100%
 			padding-bottom: 10px
+			padding-top: 10px
 			.swiper-wrapper
 				.swiper-slide
 					background: #ffffff
@@ -413,6 +414,7 @@
 					justify-content: center
 					align-items: center
 					img
+						padding-top: .5px
 						text-align: center
 						width: 100%
 						border: .5px solid rgba(19, 28, 35, 0.1)
