--- a/DongGia-master/src/components/home/index.pug
+++ b/DongGia-master/src/components/home/index.pug
@@ -42,42 +42,47 @@ section.popular-project
 			.swiper-wrapper
 				.swiper-slide
 					.row
-						a(href="").col-6
-							figure
-								img(src="../img/home/home_project_1.png", alt="")
-								figcaption
-									p
-										span Căn hộ Sunshine Marina Nha Trang Bay
-										span.fas.fa-caret-right
-						a(href="").col-6
-							figure
-								img(src="../img/home/home_project_2.png", alt="")
-								figcaption
-									p
-										span Căn hộ Napoleon Castle Nha Trang
-										span.fas.fa-caret-right
+						.col-6
+							a
+								figure
+									img(src="../img/home/home_project_1.png", alt="")
+									figcaption
+										p
+											span Căn hộ Sunshine Marina Nha Trang Bay
+											span.fas.fa-caret-right
+						.col-6
+							a
+								figure
+									img(src="../img/home/home_project_2.png", alt="")
+									figcaption
+										p
+											span Căn hộ Napoleon Castle Nha Trang
+											span.fas.fa-caret-right
 					.row
-						a(href="").col-4
-							figure
-								img(src="../img/project/project_item_1.png", alt="")
-								figcaption
-									p
-										span Ocean Hill Village Nha Trang
-										span.fas.fa-caret-right
-						a(href="").col-4
-							figure
-								img(src="../img/project/project_item_3.png", alt="")
-								figcaption
-									p
-										span The Silk Path City Phú Quốc
-										span.fas.fa-caret-right
-						a(href="").col-4
-							figure
-								img(src="../img/project/project_item_2.png", alt="")
-								figcaption
-									p
-										span Intercontinental Phú Quốc
-										span.fas.fa-caret-right
+						.col-4
+							a
+								figure
+									img(src="../img/project/project_item_1.png", alt="")
+									figcaption
+										p
+											span Ocean Hill Village Nha Trang
+											span.fas.fa-caret-right
+						.col-4
+							a
+								figure
+									img(src="../img/project/project_item_3.png", alt="")
+									figcaption
+										p
+											span The Silk Path City Phú Quốc
+											span.fas.fa-caret-right
+						.col-4
+							a
+								figure
+									img(src="../img/project/project_item_2.png", alt="")
+									figcaption
+										p
+											span Intercontinental Phú Quốc
+											span.fas.fa-caret-right
 section.home-news
 	.container
 		h2.moduleTitle Tin tức
