--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -14,10 +14,6 @@ body
 ul
 	list-style-type: none
 	padding-left: 0
-main
-	padding-top: 119px
-	@media (max-width: 991.9px)
-		padding-top: 73px
 .hiddenX
 	overflow: hidden
 img
@@ -66,6 +62,21 @@ img
 		flex: 0 0 50%
 		max-width: 50%
 @media (min-width: 768px)
+	.col-md-4
+		flex: 0 0 33.3333%
+		max-width: 33.3333%
+	.col-md-8
+		flex: 0 0 66.6666%
+		max-width: 66.6666%
+	.col-md-5
+		flex: 0 0 40%
+		max-width: 40%
+	.col-md-7
+		flex: 0 0 60%
+		max-width: 60%
+	.col-md-6
+		flex: 0 0 50%
+		max-width: 50%
 @media (min-width: 992px)
 	.col-lg
 		flex-grow: 1
