--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -5,10 +5,12 @@ html
 	-webkit-text-size-adjust: 100%
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 	margin: 0
-	font-family: 'Quicksand', sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+	font-family: 'Montserrat', sans-serif
 	color: #212529
 	text-align: left
 	background-color: #fff
+p
+	line-height: 2
 body
 	margin: 0
 ul
