--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -1,15 +1,324 @@
 .home
-	margin-top: -200px
+	margin-top: -150px
+	@media (max-width: 767.98px)
+		margin-top: -100px
+	@media (max-width: 565.98px)
+		margin-top: -50px
 	.boximg
 		display: flex
 		align-items: center
 		&.flex-end
 			justify-content: flex-end
-		img
-			width: 80%
-	hr
-		height: 5px
-		width: 378px
-		background: rgb(0, 176, 255)
-		margin-left: 25px
-		display: inline-block
+	p
+		text-align: justify
+		font-size: 14px
+	.container
+		.row
+			&:nth-child(1)
+				.col-md-5
+					hr
+						height: 10px
+						width: 40%
+						background: rgb(0, 176, 255)
+						margin-left: 25px
+						display: inline-block
+						border: none
+					p
+						padding-right: 40px
+				.col-md-7
+					.boximg
+						margin-top: -50px
+					@media (max-width: 991.98px)
+						.boximg
+							margin: 0
+					@media (max-width: 767.98px)
+						.boximg
+							display: flex
+							justify-content: center
+							img
+								width: 60%
+				@media (max-width: 767.98px)
+					flex-direction: column-reverse
+					.col-md-5
+						margin-top: 40px
+						text-align: center
+						hr
+							margin-left: 0
+							display: inline-block
+						p
+							padding-right: 0
+						@media (max-width: 565.98px)
+							margin-top: 15px
+			&:nth-child(2)
+				.col-md-8
+					margin-top: 20px
+					p
+						padding-right: 30px
+						@media (max-width: 767.98px)
+							padding-right: 0
+					.boximg
+						padding-top: 20px
+				.col-md-4
+					.boximg
+						margin-top: -100px
+						img
+							height: 450px
+							@media (max-width: 991.98px)
+								height: 400px
+							@media (max-width: 767.98px)
+								height: 350px
+							@media (max-width: 575.98px)
+								height: 300px
+					@media (max-width: 767.98px)
+						display: flex
+						justify-content: center
+						.boximg
+							margin-top: 0
+			&:nth-child(3)
+				.col-md-5
+					.boximg
+						img
+							height: 450px
+							@media (max-width: 991.98px)
+								height: 400px
+							@media (max-width: 767.98px)
+								height: 350px
+							@media (max-width: 575.98px)
+								height: 300px
+					@media (max-width: 767.98px)
+						display: flex
+						justify-content: center
+						.boximg
+							margin: 20px 0
+				.col-md-7
+					display: inline-flex
+					align-items: center
+					p
+						padding-left: 40px
+						strong
+							text-transform: uppercase
+							color: #02affc
+					@media (max-width: 767.98px)
+						p
+							padding-left: 0
+			&:nth-child(4)
+				.col-md-8
+					margin-top: 40px
+					h3
+						font-weight: bold
+						text-transform: uppercase
+						text-align: left
+						margin-right: 100px
+						background: #01d2fd
+						color: #fff
+						margin-bottom: 40px
+						@media (max-width: 767.98px)
+							margin: 0
+							text-align: center
+							margin-bottom: 20px
+				.col-md-4
+					.boximg
+						height: 100%
+						align-items: flex-end
+					@media (max-width: 767.98px)
+						display: flex
+						justify-content: center
+						.boximg
+							margin: 20px 0
+			&:nth-child(5)
+				margin-top: 80px
+				align-items: center
+				display: flex
+				.col-md-8
+					figure
+						.boximg
+							padding-left: 5%
+							margin-bottom: 40px
+							img
+								width: 80%
+						figcaption
+							padding-right: 20px
+							p
+								overflow: hidden
+								text-overflow: ellipsis
+								display: -webkit-box
+								-webkit-box-orient: vertical
+								-webkit-line-clamp: 6
+					@media (max-width: 767.98px)
+						figure
+							.boximg
+								padding: 0
+							figcaption
+								padding-right: 0
+				.col-md-4
+					.boximg
+						img
+							height: 450px
+							@media (max-width: 991.98px)
+								height: 400px
+							@media (max-width: 767.98px)
+								height: 350px
+							@media (max-width: 575.98px)
+								height: 300px
+					@media (max-width: 767.98px)
+						.boximg
+							display: flex
+							justify-content: center
+							margin: 20px 0
+			&:nth-child(6)
+				align-items: center
+				margin-top: -80px
+				@media (max-width: 991.98px)
+					margin-top: -40px
+				@media (max-width: 767.98px)
+					margin-top: 0
+				.col-md-5
+					.boximg
+						img
+							height: 450px
+							@media (max-width: 991.98px)
+								height: 400px
+							@media (max-width: 767.98px)
+								height: 350px
+							@media (max-width: 575.98px)
+								height: 300px
+					@media (max-width: 767.98px)
+						.boximg
+							display: flex
+							justify-content: center
+							margin: 20px 0
+				.col-md-7
+					p
+						padding-left: 20px
+						@media (max-width: 767.98px)
+							padding-left: 0
+			&:nth-child(7)
+				margin: 40px 0
+				.col
+					.boximg
+						display: flex
+						justify-content: flex-end
+						padding-right: 50px
+						@media (max-width: 991.98px)
+							img
+								width: 80%
+						@media (max-width: 767.98px)
+							justify-content: center
+							padding-right: 0
+						@media (max-width: 575.98px)
+							img
+								width: 60%
+			&:nth-child(8)
+				.col-md-5
+					figure
+						margin-right: -50px
+						margin-top: -100px
+						hr
+							height: 10px
+							width: 70%
+							background: rgb(0, 176, 255)
+							margin-left: 25px
+							display: inline-block
+							border: none
+						.boximg
+							img
+								width: 100%
+						figcaption
+							margin-right: 60px
+					@media (max-width: 767.98px)
+						figure
+							margin-right: 0
+							margin-top: 0
+							text-align: center
+							hr
+								margin-left: 0
+								display: inline-block
+							.boximg
+								margin: 20px 0
+				.col-md-7
+					.boximg
+						margin: 20px 0
+			&:nth-child(9)
+				padding: 20px 0
+			&:nth-child(10)
+				.col
+					margin-top: 60px
+					text-align: center
+					hr
+						height: 10px
+						width: 10%
+						background: rgb(0, 176, 255)
+						margin-left: 25px
+						display: inline-block
+						border: none
+					h2
+						color: rgb(0, 176, 255)
+						text-transform: uppercase
+						margin-top: 10px
+						font-size: 26px
+						@media (max-width: 575.98px)
+							font-size: 20px
+				.col-sm-6.col-md-4
+					margin-top: 40px
+					display: flex
+					justify-content: center
+					figure
+						.boximg
+							justify-content: center
+							img
+								height: 350px
+								@media (max-width: 991.98px)
+									height: 300px
+								@media (max-width: 767.98px)
+									height: 250px
+								@media (max-width: 575.98px)
+									height: 300px
+						figcaption
+							text-align: center
+							margin-top: 20px
+							.price
+								font-weight: 700
+								font-size: 24px
+								span
+									&:nth-child(2)
+										text-decoration: line-through
+							.sale
+								span
+									color: #01d2fd
+									font-weight: 700
+									font-size: 42px
+									@media (max-width: 991.98px)
+										font-size: 36px
+									@media (max-width: 767.98px)
+										font-size: 32px
+							.giftcode
+								span
+									&:nth-child(1)
+										color: #000000
+										font-size: 24px
+										font-weight: 700
+										@media (max-width: 575.98px)
+											font-size: 20px
+									&:nth-child(2)
+										color: #ffffff
+										background: #01d2fd
+										font-size: 28px
+										font-weight: 700
+										padding: 5px 10px
+										border-radius: 10px
+										@media (max-width: 575.98px)
+											font-size: 24px
+							a
+								display: inline-block
+								margin-top: 20px
+								padding: 10px 20px
+								font-size: 30px
+								font-weight: 700
+								color: #ffffff
+								background: #01d2fd
+								border-radius: 15px
+								text-decoration: none
+								@media (max-width: 767.98px)
+									font-size: 24px
+								@media (max-width: 575.98px)
+									font-size: 20px
